--- a/ORC_eDNA_dashboard.Rmd
+++ b/ORC_eDNA_dashboard.Rmd
@@ -254,9 +254,9 @@ my.spp <- reactive({
 
 
 
+# add sunit button
+actionButton("submit", label = "Submit")
 
-  
-  
 ```
 
 
@@ -283,7 +283,7 @@ province.choice <- sort(unique(boundaries$REGC2022_1))
 # read Non migratory Freshwater Fish Distribution
 non.mig <- reactive({
   st_read("Non-migratory_Freshwater_Fish_Distribution/Non_migratory_Freshwater_Fish_Distribution.shp", quiet = TRUE) %>% 
-    filter(Species == "Galaxias anomalus") %>% st_transform(crs = 4326)
+    filter(Species == input$Taxon) %>% st_transform(crs = 4326)
 
 })
 
@@ -330,6 +330,8 @@ my.subset <- reactive({
 ```{r}
 my.taxon <- reactive({
   
+  # start reactive
+  
   x <- as.character(input$Classification)
   eDNA_otago_sf %>% filter(eval(str2expression(x)) == input$Taxon)
   
@@ -339,6 +341,8 @@ my.coord <- st_coordinates(site.locations) %>%
      as.data.frame()
 
 my.coord$xy <- paste(my.coord$X, my.coord$Y)
+
+
 ```
 
 
@@ -457,59 +461,6 @@ renderLeaflet({
   
 })
 ```
-
-### Possible discrepancies (species only)
-
-```{r}
-renderLeaflet({
-  
-  
-    if (input$Classification == 'species') {
-    
-  
-    # get nearest
-  nearest <- st_nearest_feature(my.taxon(), non.mig())
-  
-  # get distance
-  dist <-
-    st_distance(my.taxon(), non.mig()[nearest, ], by_element = TRUE)
-  
-  # make line between points and nearest known location via loop
-  my.feature <- list()
-  
-  for (i in 1:nrow(my.taxon())) {
-    my.feature[[i]] <-
-      st_nearest_points(my.taxon()[i,], non.mig()[nearest[i],]) %>%
-      st_sf()
-  }
-  
-  
-  # nearest jump
-  nearest_jump <- bind_rows(my.feature)
-  
-  
-     loc.map() %>%
-      addPolylines(data = nearest_jump,
-               color = "white") %>%
-      addPolylines(data = non.mig(),
-               color = "yellow",
-               weight = 3)
-     
- 
-    
-  
-    
-  } else {
-    
-    loc.map()
-  }
-  
-  
-  
-  
-})
-```
-
 
 
 ### NZTCS data
@@ -1145,6 +1096,89 @@ renderLeaflet({
     addCircleMarkers(data = clust.map, color = ~ beatCol(groups))
   
   loc.map
+  
+  
+  
+  
+})
+```
+
+
+Discrepancy check
+=====================================
+
+Column {.sidebar}
+-----------------------------------------------------------------------
+
+**Provide files**
+
+Please provide one of the following files:
+(They must be placed into the correct folder)
+
+```{r}
+radioButtons(
+  "spatial.file",
+  label = "",
+  choices = list("Single species polyline" = "polyline", 
+                 "Single species polygon" = "polygon",
+                 "Non migratory freshwater fish distribution" = "nmfish"),
+  selected = "nfish"
+)
+
+
+```
+
+
+Column {data-width=600}
+-------------------------------------
+
+### Zoomable map
+
+```{r}
+
+
+renderLeaflet({
+  
+  
+    if (input$Classification == 'species') {
+    
+  
+    # get nearest
+  nearest <- st_nearest_feature(my.taxon(), non.mig())
+  
+  # get distance
+  dist <-
+    st_distance(my.taxon(), non.mig()[nearest, ], by_element = TRUE)
+  
+  # make line between points and nearest known location via loop
+  my.feature <- list()
+  
+  for (i in 1:nrow(my.taxon())) {
+    my.feature[[i]] <-
+      st_nearest_points(my.taxon()[i,], non.mig()[nearest[i],]) %>%
+      st_sf()
+  }
+  
+  
+  # nearest jump
+  nearest_jump <- bind_rows(my.feature)
+  
+  
+     loc.map() %>%
+      addPolylines(data = nearest_jump,
+               color = "white") %>%
+      addPolylines(data = non.mig(),
+               color = "yellow",
+               weight = 3)
+     
+ 
+    
+  
+    
+  } else {
+    
+    loc.map()
+  }
   
   
   
