--- a/ORC_eDNA_dashboard.Rmd
+++ b/ORC_eDNA_dashboard.Rmd
@@ -281,11 +281,8 @@ boundaries <- st_read("Regional boundaries\\regional-council-2022-generalised.sh
 province.choice <- sort(unique(boundaries$REGC2022_1))
 
 # read Non migratory Freshwater Fish Distribution
-non.mig <- reactive({
-  st_read("Non-migratory_Freshwater_Fish_Distribution/Non_migratory_Freshwater_Fish_Distribution.shp", quiet = TRUE) %>%  st_transform(crs = 4326)
- # %>%    filter(Species == input$Taxon) 
 
-})
+
 
 
 
@@ -1112,8 +1109,7 @@ Column {.sidebar}
 
 **Provide files**
 
-Please provide one of the following files:
-(They must be placed into the correct folder)
+Please ensure a *maximum* of 1 spatial file / spatial file set is placed into the correct folder. Use the **File check** tab to check.
 
 ```{r}
 radioButtons(
@@ -1128,6 +1124,29 @@ radioButtons(
 
 ```
 
+
+
+
+```{r}
+
+non.mig <- reactive({
+  
+tryCatch({
+  
+  st_read("Your Non-Migratory Freshwater Fish Distribution/Non_migratory_Freshwater_Fish_Distribution.shp", quiet = TRUE) %>% 
+    st_transform(crs = 4326)
+  
+},  error = function(e){
+  message("It appears your fish distribution files are not correctly installed")
+
+} 
+)
+  
+})
+
+
+
+```
 
 **Your eDNA record is of:**
 
@@ -1144,6 +1163,7 @@ renderUI({
 
 ```{r}
 # reactive drop down menu from nmfish
+
 
   
 renderUI({
@@ -1227,6 +1247,8 @@ Row {.tabset .tabset-fade}
 
 
 renderLeaflet({
+  
+  
   
   non.mig.sp <- non.mig() %>% filter(Species == input$non.mig.sp) %>% st_make_valid()
   
@@ -1372,4 +1394,55 @@ renderDataTable({
 
 ```
 
+
+### File check
+
+Files present:
+
+```{r}
+
+
+
+
+renderPrint({
+  
+  if (input$spatial.file == "nmfish") {
+    A <- list.files(paste0(getwd(), "/Your Non-Migratory Freshwater Fish Distribution"))
+    
+    if (identical(A, character(0)) == TRUE) {
+      showModal(modalDialog("No files are present. Please copy file(s) into: 'Your Non-Migratory Freshwater Fish Distribution'"))
+      
+    } else {
+      print(A, row.name = FALSE)
+    }
+    
+    
+    
+  } else if (input$spatial.file == "polyline") {
+    A <- list.files(paste0(getwd(), "/Your Polylines"))
+    
+    if (identical(A, character(0)) == TRUE) {
+      showModal(modalDialog("No files are present. Please copy file(s) into: 'Your Polylines'"))
+      
+    } else {
+      print(A, row.names = FALSE)
+    }
+    
+  } else {
+    A <- list.files(paste0(getwd(), "/Your Polygons"))
+    
+    if (identical(A, character(0)) == TRUE) {
+      showModal(modalDialog("No files are present. Please copy file(s) into: 'Your Polygons'"))
+      
+    } else {
+      print(A, row.names = FALSE)
+    }
+    
+    
+  }
+  
+})  
+  
+
+```
 
