--- a/ORC_eDNA_dashboard.Rmd
+++ b/ORC_eDNA_dashboard.Rmd
@@ -71,7 +71,6 @@ nztcs <- read_excel("Data/NZTCS.xlsx")
 renderUI({
   
   modification.time <- file.info("NZTCS.xlsx")$mtime
-  
   print(modification.time)
   
   
@@ -84,7 +83,62 @@ renderUI({
 **Please check that is the appropriate version for your analysis**
 
 
-Column {data-width=600}
+```{r}
+radioButtons(
+  "province",
+  label = "Clip data by province?",
+  choices = list(
+    "No" = "No",
+    "Yes" = "Yes"
+  ),
+  selected = "Yes"
+  
+)
+```
+
+
+
+```{r}
+# maximum 50 MB
+options(shiny.maxRequestSize=50*1024^2) 
+
+# select provincial boundaries
+boundaries <- st_read("Regional boundaries\\regional-council-2022-generalised.shp", quiet = TRUE)
+
+province.choice <- sort(unique(boundaries$REGC2022_1))
+
+```
+
+
+```{r}
+# only reveal if "yes" selected
+
+conditionalPanel(
+  condition = "input.province == 'Yes'",
+  
+  selectInput(
+    "my.province",
+    label = "Clip by province:",
+    choices = province.choice,
+    selected = "Otago Region"
+  )
+  
+)
+
+# crop to catchment (actually crop) to create usable subset
+my.catchment <- reactive({
+  if (input$province == "Yes") {
+    boundaries %>% filter(boundaries$REGC2022_1 == input$my.province)
+    
+  } else {
+    boundaries
+  }
+})
+
+```
+
+
+Row {.tabset .tabset-fade}
 -------------------------------------
 ### Zoomable map
 
@@ -139,40 +193,47 @@ eDNA <- left_join(records, date.id, by = "UID")
 
 ```{r, message = FALSE}
 # read in standardised fmu shapefile (created in eDNA base code)
-fmu <- st_read("Data/FMU_corrected.shp",  quiet = TRUE)
-outer <- st_read("Data/FMU_outer.shp",  quiet = TRUE) # note this is an approximation of Otago boundary
 
 # read in eDNA data (fast)
 eDNA <- eDNA %>% # data provided by Wilderlab
   janitor::clean_names()
 
-# intersect with freshwater management units
+
 # this is because data does not match Otago region
 # now 16 secs rather than 145 secs
-eDNA_otago_sf <- eDNA %>%
+eDNA_my_prov_sf <- reactive ({
+  
+  eDNA_my_prov_sf  <- eDNA %>%
   st_as_sf(coords = c("longitude", "latitude"), crs = 4326) %>%
-  st_intersection(outer)
+  st_intersection(my.catchment())
+  
+  # fix dates
+  eDNA_my_prov_sf$collection_date <- ymd(eDNA_my_prov_sf $collection_date )
+  
+  # unique coord
+  eDNA_coord <- st_coordinates(eDNA_my_prov_sf) %>% as.data.frame()
+  eDNA_coord$xy <- paste(eDNA_coord$X, eDNA_coord$Y)
+  eDNA_my_prov_sf <- cbind(eDNA_my_prov_sf, eDNA_coord$xy)
+  eDNA_my_prov_sf
+  
+})
 
-# fix dates
-eDNA_otago_sf$collection_date <- ymd(eDNA_otago_sf$collection_date )
 
-# unique coord
-eDNA_coord <- st_coordinates(eDNA_otago_sf) %>% as.data.frame()
-eDNA_coord$xy <- paste(eDNA_coord$X, eDNA_coord$Y)
-eDNA_otago_sf <- cbind(eDNA_otago_sf, eDNA_coord$xy)
-
-
-# sample locations (fast)
-simple.loc <- eDNA_otago_sf %>%  group_by(eDNA_coord.xy) %>%
-  filter(collection_date == min(collection_date)) %>%
-  slice(1)
-
-# site locations change to spatial
-site.locations <- simple.loc
+# sample locations (fast) by first date
+site.locations <- reactive({
+  
+  eDNA_my_prov_sf() %>%  
+    group_by(eDNA_coord.xy) %>%
+    filter(collection_date == min(collection_date)) %>%
+    slice(1) 
+  
+})
 
 
 # make base map
-basemap <- leaflet() %>%
+basemap <- reactive({
+  
+  leaflet() %>%
   # add different provider tiles
   addProviderTiles(
     "OpenStreetMap",
@@ -183,23 +244,74 @@ basemap <- leaflet() %>%
     "Esri.WorldImagery",
     # give the layer a name
     group = "World"
-  )
+  ) %>%
+  addPolygons(data = my.catchment(),
+              weight = 1,
+              fillOpacity = 0.05,
+              color = "white")
+  })
 
 
 # visualise site locations
-loc.map<- basemap %>%
-  addCircleMarkers(data = site.locations ,
+renderLeaflet({
+  
+  basemap() %>%
+  addCircleMarkers(data = site.locations() ,
                    clusterOptions = markerClusterOptions(),
                    popup = ~client_sample_id) %>%
   addMiniMap()
 
-loc.map
+})
 
 
 
 
 
 ```
+
+### Meshed
+
+```{r}
+
+
+
+renderLeaflet ({
+  
+  # override any random origin of grid if it exists
+  set.seed(500)
+  
+  catch.2193 <- my.catchment() %>%
+    st_transform(crs = 2193)
+  
+  
+  grid <- st_make_grid(
+    catch.2193,
+    cellsize = c(10000, 10000),
+    crs = 2193,
+    square = TRUE
+  ) %>%
+    st_as_sf()
+  
+  inter <- st_intersection(catch.2193, grid) %>%
+    st_transform(crs = 4236)
+  
+  leaflet() %>%
+    # add different provider tiles
+    addProviderTiles("Esri.WorldImagery",
+                     # give the layer a name
+                     group = "World") %>%
+    addPolygons(
+      data = inter,
+      weight = 1,
+      fillOpacity = 0.05,
+      color = "white"
+    ) %>%
+    addMiniMap()
+  
+})
+```
+
+
 
 
 By classification
@@ -231,7 +343,8 @@ selectInput(
 # reactive taxonomic choices
 
 renderUI({
-  my.selection <- eDNA_otago_sf %>% select(input$Classification)
+  
+  my.selection <- eDNA_my_prov_sf() %>% select(input$Classification)
   st_geometry(my.selection) <- NULL
   
   choices <- sort(unique(my.selection[, 1]))
@@ -249,78 +362,14 @@ renderUI({
 my.spp <- reactive({
   x <- as.character(input$Classification)
   
-  eDNA_otago_sf %>% filter(eval(str2expression(x)) == input$Taxon)
+  eDNA_my_prov_sf() %>% 
+    filter(eval(str2expression(x)) == input$Taxon)
   
 })
 
 
-
-
-
 ```
 
-
-**Optional - check distribution**
-
-Choose 1 spatial file which represents existing knowledge of the taxon either:
-
-* points (e.g. established locations)
-* polylines (e.g. occupied river fragments)
-* polygons (e.g. known catchments)
-
-The taxon will be assessed against this and aberrant entries will be flagged
-
-
-```{r}
-# maximum 50 MB
-options(shiny.maxRequestSize=50*1024^2) 
-
-# select provincial boundaries
-boundaries <- st_read("Regional boundaries\\regional-council-2022-generalised.shp", quiet = TRUE)
-
-province.choice <- sort(unique(boundaries$REGC2022_1))
-
-# read Non migratory Freshwater Fish Distribution
-
-
-
-
-
-```
-
-
-**Clip by province**
-
-```{r}
-# only reveal if "species" selected
-
-conditionalPanel(
-  condition = "input.Classification == 'species'",
-  
-  selectInput("province",
-              label = "Select Province",
-              choices = province.choice,
-              selected = "Otago Region")
-  
-  )
-
-
-# crop to catchment (actually crop) to create usable subset
-my.catchment <- reactive({
-  
-  boundaries %>% filter(boundaries$REGC2022_1 == input$province)
-  
-})
-
-my.subset <- reactive({
-  
-  st_crop(non.mig(), my.catchment)
-  
-})
-
-
-
-```
 
 
 
@@ -330,14 +379,22 @@ my.taxon <- reactive({
   # start reactive
   
   x <- as.character(input$Classification)
-  eDNA_otago_sf %>% filter(eval(str2expression(x)) == input$Taxon)
+  eDNA_my_prov_sf() %>% 
+    filter(eval(str2expression(x)) == input$Taxon)
   
 })
 
-my.coord <- st_coordinates(site.locations) %>%
+my.coord <- reactive ({
+  
+  my.coord <- st_coordinates(site.locations()) %>%
      as.data.frame()
+  
+  my.coord$xy <- paste(my.coord$X, my.coord$Y)
+  my.coord
+  
+})
 
-my.coord$xy <- paste(my.coord$X, my.coord$Y)
+
 
 
 ```
@@ -353,7 +410,7 @@ Row {data-height=75}
 
 percentage_of_locations <- reactive({
    round(length(unique(my.sf.coord()$xy))/
-    length(unique(my.coord$xy)),4)  * 100
+    length(unique(my.coord()$xy)),4)  * 100
 })
 
 
@@ -414,7 +471,7 @@ loc.map <- reactive({
   
   # visualise site locations
   
-  loc.map <- basemap %>%
+  basemap() %>%
     addCircleMarkers(
       data = my.taxon() ,
       color = "red",
@@ -451,7 +508,7 @@ renderLeaflet({
   
   loc.map() %>%   
     addCircleMarkers(
-      data = site.locations,
+      data = site.locations(),
       color = "white",
       fillOpacity = 0.01,
       radius = 10
@@ -586,7 +643,7 @@ list(
 
     
 
-# percentage.records <- nrow(my.species())/ nrow(eDNA_otago_sf) * 100
+
 
 ```
 
@@ -731,7 +788,7 @@ my.selection <- reactive({
   
   if (input$choice == "upload") {
     
-    eDNA_otago_sf %>%
+    eDNA_my_prov_sf() %>%
       st_as_sf(coords = c("longitude", "latitude"),
                crs = 4326) %>%
       st_intersection(dataset())
@@ -742,14 +799,14 @@ my.selection <- reactive({
       
       my.circle <- st_buffer(sp.file(), sp.file()$radius) 
       
-      eDNA_otago_sf %>%
+      eDNA_my_prov_sf() %>%
         st_as_sf(coords = c("longitude", "latitude"),
                  crs = 4326) %>%
         st_intersection(my.circle)
       
     } else {
       
-      eDNA_otago_sf %>%
+      eDNA_my_prov_sf() %>%
         st_as_sf(coords = c("longitude", "latitude"),
                  crs = 4326) %>%
         st_intersection(sp.file())
@@ -772,7 +829,7 @@ output$mymap <- renderLeaflet({
     
     site.polygon <- dataset() %>% st_zm()
     
-    new.map <- basemap %>%
+    new.map <- basemap() %>%
       addCircleMarkers(
         data = my.selection() ,
         clusterOptions = markerClusterOptions(),
@@ -826,7 +883,7 @@ output$mymap <- renderLeaflet({
         position = "topleft"
       ) %>%
       
-      addMarkers(data = site.locations)%>%
+      addMarkers(data = site.locations())%>%
       addMiniMap()
     
   }
@@ -1081,7 +1138,7 @@ renderLeaflet({
   clust.map <- as_Spatial(clust.map)
   
   # make base map
-  basemap <- leaflet() %>%
+  map.clust <- leaflet() %>%
     addProviderTiles("Esri.WorldImagery",
                      group = "World")
   
@@ -1089,7 +1146,7 @@ renderLeaflet({
   
   
   # visualise site locations
-  site.map <- basemap %>%
+  site.map <- map.clust %>%
     addCircleMarkers(data = clust.map, color = ~ beatCol(groups)) %>%
    addMiniMap()
   
@@ -1112,6 +1169,8 @@ Column {.sidebar}
 
 Please ensure a *maximum* of 1 spatial file / spatial file set is placed into the correct folder. Use the **File check** tab to check.
 
+If you alter the inputs you will need to push "activate" to update the results.
+
 
 
 ```{r}
@@ -1124,6 +1183,7 @@ radioButtons(
   choices = list(
     "Single species polyline" = "polyline",
     "Single species polygon" = "polygon",
+    "Catchment polygon" = "catchment",
     "Non migratory freshwater fish distribution" = "nmfish"
   ),
   selected = "nmfish"
@@ -1135,9 +1195,16 @@ radioButtons(
 **Your current eDNA record is of:**
 
 ```{r}
+# base species is reactive to ensure it corresponds with data
+base_species <- eventReactive(input$submit,
+                              {
+                                input$Taxon
+                              })
+
+
 renderUI({
   
-  input$Taxon
+  base_species()
   
 })
 ```
@@ -1160,20 +1227,20 @@ my.shape <- reactive({
     my.shape
     
     
-  } else if (input$spatialfile == "polygon") {
-    filenames <- list.files(paste0(getwd(), "/Your Species Polygons"))
+  } else if (input$spatialfile == "catchment") {
+    filenames <- list.files(paste0(getwd(), "/Your Catchment Polygons"))
     
     # get shapefile
     my.file <- filenames[grep("shp$", filenames)]
     
     my.shape2  <-
-      st_read(paste0("Your Species Polygons/", my.file), quiet = TRUE) %>%
+      st_read(paste0("Your Catchment Polygons/", my.file), quiet = TRUE) %>%
       st_make_valid() %>%
       st_transform(crs = 4326)
     
     my.shape2
     
-  } else {
+  } else if (input$spatialfile == "polyline") {
     
     filenames <- list.files(paste0(getwd(), "/Your Species Polylines"))
     
@@ -1186,6 +1253,20 @@ my.shape <- reactive({
       st_transform(crs = 4326)
     
     my.shape3
+    
+  } else {
+  
+  filenames <- list.files(paste0(getwd(), "/Your Species Polygons"))
+    
+    # get shapefile
+    my.file <- filenames[grep("shp$", filenames)]
+    
+    my.shape4  <-
+      st_read(paste0("Your Species Polygons/", my.file), quiet = TRUE) %>%
+      st_make_valid() %>%
+      st_transform(crs = 4326)
+    
+    my.shape4
   }
     
 
@@ -1195,31 +1276,31 @@ my.shape <- reactive({
 
 
 ```{r}
-# my.polygon conditional selections
+# my.catchment conditional selections
 # conditional on submit
 
-polygon.choices <- reactive({
+catchment.choices <- reactive({
                          
-  if (input$spatialfile == "polygon") {
-    polyfish <- my.shape()
-    st_geometry(polyfish) <- NULL
-    polynames <- select_if(polyfish, is.character) %>% names()
-    polygon.choices <- sort(polynames)
-    polygon.choices
+  if (input$spatialfile == "catchment") {
+    poly.catchment <- my.shape()
+    st_geometry(poly.catchment) <- NULL
+    catchment.names <- select_if(poly.catchment, is.character) %>% names()
+    catchment.choices <- sort(catchment.names)
+    catchment.choices
     
   } else {
-    polygon.choices <- NULL
-    polygon.choices
+    catchment.choices <- NULL
+    catchment.choices
   }
 })
 
-# species choices for my.polygon
+# species choices for my.catchment
 renderUI({
-  conditionalPanel(condition = "input.spatialfile == 'polygon'",
+  conditionalPanel(condition = "input.spatialfile == 'catchment'",
                    
-                   selectInput("polygon.var",
+                   selectInput("catchment.var",
                                label = "Pop up information from:",
-                               choices = polygon.choices()))
+                               choices = catchment.choices()))
   
 })
 
@@ -1254,7 +1335,8 @@ renderUI({
 # distance threshold for nmfish
 renderUI({
   conditionalPanel(
-    condition = "input.spatialfile == 'nmfish'",
+    condition = "input.spatialfile == 'nmfish' |
+    input.spatialfile == 'polyline'"  ,
     
     numericInput("aberrant", label = "Distance threshold for aberrant result (nearest m)", value = 1000)
   )
@@ -1310,83 +1392,165 @@ Row {.tabset .tabset-fade}
 ### Zoomable map
 
 ```{r}
-
-
 my.map <- eventReactive(input$submit,
-                       {
-  
-  if (input$spatialfile == "nmfish") {
-    
-    non.mig.sp <-
-      my.shape() %>% 
-      filter(Species == input$non.mig.sp) %>% 
-      st_make_valid() 
-    
-    # get nearest
-    nearest <- st_nearest_feature(my.taxon(), non.mig.sp)
-    
-    # get distance
-    dist <-
-      st_distance(my.taxon(), non.mig.sp[nearest, ], by_element = TRUE)
-    
-    # make line between points and nearest known location via loop
-    my.feature <- list()
-    
-    for (i in 1:nrow(my.taxon())) {
-      my.feature[[i]] <-
-        st_nearest_points(my.taxon()[i,], non.mig.sp[nearest[i],]) %>%
-        st_sf()
-    }
-    
-    # nearest jump
-    nearest_jump <- bind_rows(my.feature)
-    
-    
-    loc.map() %>%
-      addPolylines(data = nearest_jump,
-                   color = "white",
-                   weight = 2) %>%
-      addPolylines(data = non.mig.sp ,
-                   color = "yellow",
-                   weight = 3)
-    
-    
-  } else if (input$spatialfile == "polyline") {
-    
-    loc.map()
-    
-  } else {
-    
-    # work out if in or out
-    my.polygon <- my.shape()
-    my.polygon$present <- lengths(st_intersects(my.polygon, my.taxon())) > 0
-    my.polygon$present <- ifelse(my.polygon$present == TRUE, "red", "black")
-
-    my.popup.col <- which(colnames(my.polygon)== input$polygon.var)
-    
-    loc.map() %>%
-      addPolygons(
-        data = my.polygon,
-        fillColor = ~ present,
-        color = "white",
-        weight = 1,
-        fillOpacity = 0.3,
-        highlightOptions = highlightOptions(
-          color = 'white',
-          weight = 1,
-          bringToFront = TRUE
-        ),
-        popup = my.polygon[[input$polygon.var]]
-      )
-    
-    
-  }
-  
-})
+                        {
+                           nearest <- NULL
+                          
+                          
+                          if (input$spatialfile == "nmfish") {
+                            non.mig.sp <-
+                              my.shape() %>%
+                              filter(Species == input$non.mig.sp) %>%
+                              st_make_valid()
+                            
+                            # get nearest
+                            nearest <- st_nearest_feature(my.taxon(), non.mig.sp)
+                            
+                            # get distance
+                            dist <-
+                              st_distance(my.taxon(), non.mig.sp[nearest,], 
+                                          by_element = TRUE)
+                            
+                            # make line between points and nearest known 
+                            # location via loop
+                            my.feature <- list()
+                            
+                            for (i in 1:nrow(my.taxon())) {
+                              my.feature[[i]] <-
+                                st_nearest_points(my.taxon()[i, ],
+                                                  non.mig.sp[nearest[i], ]) %>%
+                                st_sf()
+                            }
+                            
+                            # nearest jump
+                            nearest_jump <- bind_rows(my.feature)
+                            
+                            
+                            loc.map() %>%
+                              addPolylines(data = nearest_jump,
+                                           color = "white",
+                                           weight = 2) %>%
+                              addPolylines(data = non.mig.sp ,
+                                           color = "yellow",
+                                           weight = 3)
+                            
+                            
+                          } else if (input$spatialfile == "polyline") {
+                            my.species <-
+                              my.shape() %>%
+                              st_make_valid()
+                            
+                            # get nearest
+                            nearest <- st_nearest_feature(my.taxon(), my.species)
+                            
+                            # get distance
+                            dist <-
+                              st_distance(my.taxon(), my.species[nearest,], 
+                                          by_element = TRUE)
+                            
+                            # make line between points and 
+                            # nearest known location via loop
+                            
+                            my.feature <- list()
+                            
+                            for (i in 1:nrow(my.taxon())) {
+                              my.feature[[i]] <-
+                                st_nearest_points(my.taxon()[i, ],
+                                                  my.species[nearest[i], ]) %>%
+                                st_sf()
+                            }
+                            
+                            # nearest jump
+                            nearest_jump <- bind_rows(my.feature)
+                            
+                            
+                            loc.map() %>%
+                              addPolylines(data = nearest_jump,
+                                           color = "white",
+                                           weight = 2) %>%
+                              addPolylines(data = my.species ,
+                                           color = "yellow",
+                                           weight = 3)
+                            
+                            
+                          } else if (input$spatialfile == "catchment") {
+                            # work out if in or out
+                            my.catchment <- my.shape()
+                            my.catchment$present <-
+                              lengths(st_intersects(my.catchment, my.taxon())) > 0
+                            my.catchment$present <-
+                              ifelse(my.catchment$present == TRUE, "red", "black")
+                            
+                            loc.map() %>%
+                              addPolygons(
+                                data = my.catchment,
+                                fillColor = ~ present,
+                                color = "white",
+                                weight = 1,
+                                fillOpacity = 0.3,
+                                highlightOptions = highlightOptions(
+                                  color = 'white',
+                                  weight = 1,
+                                  bringToFront = TRUE
+                                ),
+                                popup = my.catchment[[input$catchment.var]]
+                              )
+                            
+                            
+                          } else {
+                            # work out if in or out
+                            my.polygon <- my.shape()
+                            my.polygon$present <-
+                              lengths(st_intersects(my.polygon, my.taxon())) > 0
+                            my.polygon$present <-
+                              ifelse(my.polygon$present == TRUE, "red", "black")
+                            
+                            # get nearest
+                            nearest <- st_nearest_feature(my.taxon(), my.polygon)
+                            
+                            # get distance
+                            dist <-
+                              st_distance(my.taxon(), my.polygon[nearest,], 
+                                          by_element = TRUE)
+                            
+                            # make line between points and 
+                            # nearest known location via loop
+                            
+                            my.feature <- list()
+                            
+                            for (i in 1:nrow(my.taxon())) {
+                              my.feature[[i]] <-
+                                st_nearest_points(my.taxon()[i, ],
+                                                  my.polygon[nearest[i], ]) %>%
+                                st_sf()
+                            }
+                            
+                            # nearest jump
+                            nearest_jump <- bind_rows(my.feature)
+                            
+                            loc.map() %>%
+                              addPolygons(
+                                data = my.polygon,
+                                fillColor = ~ present,
+                                color = "white",
+                                weight = 1,
+                                fillOpacity = 0.3,
+                                highlightOptions = highlightOptions(
+                                  color = 'white',
+                                  weight = 1,
+                                  bringToFront = TRUE
+                                )
+                              )%>%
+                              addPolylines(data = nearest_jump,
+                                           color = "white",
+                                           weight = 2) 
+                            
+                          }
+                          
+                        })
 
 
 renderLeaflet ({
-  
   my.map()
   
   
@@ -1400,24 +1564,36 @@ renderLeaflet ({
 
 ```{r}
 
-aberrant <- reactive({
+aberrant <- eventReactive(input$submit,
+                       {
   
- if (input$spatialfile == "nmfish") {
+ if (input$spatialfile == "nmfish" |
+     input$spatialfile == "polyline" ) {
    
-   non.mig.sp <- my.shape() %>% 
+   if (input$spatialfile == "nmfish") {
+     
+   my.selected.species <- my.shape() %>% 
      filter(Species == input$non.mig.sp) %>% 
      st_make_valid()
+   
+   } else {
+     
+    my.selected.species <- my.shape() %>% 
+     st_make_valid()
+     
+   }
   
     # get nearest
-    nearest <- st_nearest_feature(my.taxon(), non.mig.sp)
+    nearest <- st_nearest_feature(my.taxon(), my.selected.species)
     
     # flatten (change crs to NZTM for distance calculation)
     my.taxon.flat <- my.taxon() %>% st_transform(crs = 2193)
-    non.mig.sp.flat <- non.mig.sp  %>% st_transform(crs = 2193)
+    my.selected.species.flat <- my.selected.species  %>% 
+      st_transform(crs = 2193)
     
     # get distance
     dist.m <-
-      st_distance(my.taxon.flat , non.mig.sp.flat[nearest,], 
+      st_distance(my.taxon.flat , my.selected.species.flat[nearest,], 
                   by_element = TRUE)
     dist.m <- round(dist.m, 0)
     
@@ -1492,45 +1668,55 @@ Files present:
 
 ```{r}
 
+
 renderPrint({
+  A <- list.files(paste0(getwd(), "/Your Species Polylines"))
   
-      A <- list.files(paste0(getwd(), "/Your Species Polylines"))
+  if (identical(A, character(0)) == TRUE) {
+    your_polylines = "No files are present. If using this option please copy file(s) into: 'Your Species Polylines'"
     
-    if (identical(A, character(0)) == TRUE) {
-      
-      your_polylines ="No files are present. If using this option please copy file(s) into: 'Your Species Polylines'"
-      
-    } else {
-      
-      your_polylines = A 
-    }
-      
-      
-          B <- list.files(paste0(getwd(), "/Your Species Polygons"))
+  } else {
+    your_polylines = A
+  }
+  
+  
+  B <-
+    list.files(paste0(getwd(), "/Your Catchment Polygons"))
+  
+  if (identical(B, character(0)) == TRUE) {
+    your_catchment = "No files are present. If using this option please copy file(s) into: 'Your Catchement Polygons'"
     
-    if (identical(B, character(0)) == TRUE) {
-      your_polygons = "No files are present. If using this option please copy file(s) into: 'Your Species Polygons'"
-      
-    } else {
-      your_polygons = B
-    }
+  } else {
+    your_catchment = B
+  }
+  
+  
+  C <-
+    list.files(paste0(getwd(), "/Your Non-Migratory Freshwater Fish Distribution"))
+  
+  if (identical(C, character(0)) == TRUE) {
+    your_fish = "No files are present. If using this option please copy file(s) into: 'Your Non-Migratory Freshwater Fish Distribution"
     
-
-    C <- list.files(paste0(getwd(), "/Your Non-Migratory Freshwater Fish Distribution"))
+  } else {
+    your_fish = C
+  }
+  
+  D <- list.files(paste0(getwd(), "/Your Species Polygons"))
+  
+  if (identical(C, character(0)) == TRUE) {
+    your_fish = "No files are present. If using this option please copy file(s) into: 'Your Species Polygons"
     
-    if (identical(C, character(0)) == TRUE) {
-      
-      your_fish = "No files are present. If using this option please copy file(s) into: 'Your Non-Migratory Freshwater Fish Distribution"
-      
-    } else {
-      
-     your_fish = C
-    }
-    
-
-    list("Polyline check" = your_polylines, 
-         "Polygon check" = your_polygons, 
-         "Non-migratory fish check" = your_fish)
+  } else {
+    your_polygons = D
+  }
+  
+  list(
+    "Catchment check" = your_catchment,
+    "Non-migratory fish check" = your_fish,
+    "Polygon check" = your_polygons,
+    "Polyline check" = your_polylines
+  )
+  
   
 })  
   
